src/parse/parsetiger.output
Terminals unused in grammar

    "_cast"
    "class"
    "extends"
    "import"
    "method"
    "new"
    "primitive"
    "_lvalue"
    "_field"
    "_fieldinit"
    "_cast_exp"


State 2 conflicts: 1 shift/reduce
State 21 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: exp
    2        | chunks

    3 exp: "integer"
    4    | "string"
    5    | "nil"
    6    | "identifier"
    7    | "identifier" "(" exps.0 ")"
    8    | "(" exps.0 ")"
    9    | lvalue ":=" exp
   10    | "if" exp "then" exp
   11    | "if" exp "then" exp "else" exp
   12    | "while" exp "do" exp
   13    | "for" "identifier" ":=" exp "to" exp "do" exp
   14    | "break"
   15    | "let" chunks "in" exps.0 "end"
   16    | exp "+" exp
   17    | exp "-" exp
   18    | exp "*" exp
   19    | exp "/" exp
   20    | exp "=" exp
   21    | exp "<>" exp
   22    | exp "<" exp
   23    | exp "<=" exp
   24    | exp ">" exp
   25    | exp ">=" exp
   26    | "-" exp
   27    | exp "&" exp
   28    | exp "|" exp
   29    | "identifier" "[" exp "]" "of" exp
   30    | "identifier" "{" fieldinits "}"
   31    | "_exp" "(" "integer" ")"

   32 lvalue: "identifier"
   33       | lvalue "[" exp "]"
   34       | lvalue "." "identifier"

   35 exps.0: ε
   36       | exps

   37 exps: exp
   38     | exps ";" exp

   39 fieldinits: ε
   40           | fieldinits.1

   41 fieldinits.1: fieldinit
   42             | fieldinits.1 "," fieldinit

   43 fieldinit: "identifier" "=" exp

   44 chunks: ε
   45       | tychunk chunks
   46       | funchunk chunks
   47       | varchunk chunks

   48 funchunk: fundec
   49         | fundec funchunk

   50 fundec: "function" "identifier" "(" funargs ")" typeid.opt "=" exp

   51 funargs: ε
   52        | funargs.1

   53 funargs.1: "identifier" ":" typeid
   54          | funargs.1 "," "identifier" ":" typeid

   55 typeid.opt: ε
   56           | ":" typeid

   57 varchunk: vardec

   58 vardec: "var" "identifier" ":=" exp
   59       | "var" "identifier" ":" typeid ":=" exp

   60 tychunk: tydec
   61        | tydec tychunk

   62 tydec: "type" "identifier" "=" ty

   63 ty: typeid
   64   | "{" tyfields "}"
   65   | "array" "of" typeid

   66 tyfields: ε
   67         | tyfields.1

   68 tyfields.1: tyfield
   69           | tyfields.1 "," tyfield

   70 tyfield: "identifier" ":" typeid

   71 typeid: "identifier"
   72       | "_namety" "(" "integer" ")"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "string" <std::string> (258) 4
    "identifier" <misc::symbol> (259) 6 7 13 29 30 32 34 43 50 53 54 58 59 62 70 71
    "integer" <int> (260) 3 31 72
    "&" (261) 27
    "array" (262) 65
    ":=" (263) 9 13 58 59
    "break" (264) 14
    "_cast" (265)
    "class" (266)
    ":" (267) 53 54 56 59 70
    "," (268) 42 54 69
    "/" (269) 19
    "do" (270) 12 13
    "." (271) 34
    "else" (272) 11
    "end" (273) 15
    "=" (274) 20 43 50 62
    "extends" (275)
    "for" (276) 13
    "function" (277) 50
    ">=" (278) 25
    ">" (279) 24
    "if" (280) 10 11
    "import" (281)
    "in" (282) 15
    "{" (283) 30 64
    "[" (284) 29 33
    "<=" (285) 23
    "let" (286) 15
    "(" (287) 7 8 31 50 72
    "<" (288) 22
    "-" (289) 17 26
    "method" (290)
    "<>" (291) 21
    "new" (292)
    "nil" (293) 5
    "of" (294) 29 65
    "|" (295) 28
    "+" (296) 16
    "primitive" (297)
    "}" (298) 30 64
    "]" (299) 29 33
    ")" (300) 7 8 31 50 72
    ";" (301) 38
    "then" (302) 10 11
    "*" (303) 18
    "to" (304) 13
    "type" (305) 62
    "var" (306) 58 59
    "while" (307) 12
    UMINUS (308)
    "_exp" (309) 31
    "_lvalue" (310)
    "_field" (311)
    "_fieldinit" (312)
    "_cast_exp" (313)
    "_namety" (314) 72
    "_chunks" (315)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    program (62)
        on left: 1 2
        on right: 0
    exp <ast::Exp*> (63)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 1 9 10 11 12 13 16 17 18 19 20 21 22 23 24 25 26 27 28 29 33 37 38 43 50 58 59
    lvalue <ast::Var*> (64)
        on left: 32 33 34
        on right: 9 33 34
    exps.0 <ast::exps_type*> (65)
        on left: 35 36
        on right: 7 8 15
    exps <ast::exps_type*> (66)
        on left: 37 38
        on right: 36 38
    fieldinits <ast::fieldinits_type*> (67)
        on left: 39 40
        on right: 30
    fieldinits.1 <ast::fieldinits_type*> (68)
        on left: 41 42
        on right: 40 42
    fieldinit <ast::FieldInit*> (69)
        on left: 43
        on right: 41 42
    chunks <ast::ChunkList*> (70)
        on left: 44 45 46 47
        on right: 2 15 45 46 47
    funchunk <ast::FunctionChunk*> (71)
        on left: 48 49
        on right: 46 49
    fundec <ast::FunctionDec*> (72)
        on left: 50
        on right: 48 49
    funargs <ast::VarChunk*> (73)
        on left: 51 52
        on right: 50
    funargs.1 <ast::VarChunk*> (74)
        on left: 53 54
        on right: 52 54
    typeid.opt <ast::NameTy*> (75)
        on left: 55 56
        on right: 50
    varchunk <ast::VarChunk*> (76)
        on left: 57
        on right: 47
    vardec <ast::VarDec*> (77)
        on left: 58 59
        on right: 57
    tychunk <ast::TypeChunk*> (78)
        on left: 60 61
        on right: 45 61
    tydec <ast::TypeDec*> (79)
        on left: 62
        on right: 60 61
    ty <ast::Ty*> (80)
        on left: 63 64 65
        on right: 62
    tyfields <ast::fields_type*> (81)
        on left: 66 67
        on right: 64
    tyfields.1 <ast::fields_type*> (82)
        on left: 68 69
        on right: 67 69
    tyfield <ast::Field*> (83)
        on left: 70
        on right: 68 69
    typeid <ast::NameTy*> (84)
        on left: 71 72
        on right: 53 54 56 59 63 65 70


State 0

    0 $accept: • program "end of file"
    1 program: • exp
    2        | • chunks
    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • "identifier"
    7    | • "identifier" "(" exps.0 ")"
    8    | • "(" exps.0 ")"
    9    | • lvalue ":=" exp
   10    | • "if" exp "then" exp
   11    | • "if" exp "then" exp "else" exp
   12    | • "while" exp "do" exp
   13    | • "for" "identifier" ":=" exp "to" exp "do" exp
   14    | • "break"
   15    | • "let" chunks "in" exps.0 "end"
   16    | • exp "+" exp
   17    | • exp "-" exp
   18    | • exp "*" exp
   19    | • exp "/" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp "<" exp
   23    | • exp "<=" exp
   24    | • exp ">" exp
   25    | • exp ">=" exp
   26    | • "-" exp
   27    | • exp "&" exp
   28    | • exp "|" exp
   29    | • "identifier" "[" exp "]" "of" exp
   30    | • "identifier" "{" fieldinits "}"
   31    | • "_exp" "(" "integer" ")"
   32 lvalue: • "identifier"
   33       | • lvalue "[" exp "]"
   34       | • lvalue "." "identifier"
   44 chunks: ε •  ["end of file"]
   45       | • tychunk chunks
   46       | • funchunk chunks
   47       | • varchunk chunks
   48 funchunk: • fundec
   49         | • fundec funchunk
   50 fundec: • "function" "identifier" "(" funargs ")" typeid.opt "=" exp
   57 varchunk: • vardec
   58 vardec: • "var" "identifier" ":=" exp
   59       | • "var" "identifier" ":" typeid ":=" exp
   60 tychunk: • tydec
   61        | • tydec tychunk
   62 tydec: • "type" "identifier" "=" ty

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 5
    "function"    shift, and go to state 6
    "if"          shift, and go to state 7
    "let"         shift, and go to state 8
    "("           shift, and go to state 9
    "-"           shift, and go to state 10
    "nil"         shift, and go to state 11
    "type"        shift, and go to state 12
    "var"         shift, and go to state 13
    "while"       shift, and go to state 14
    "_exp"        shift, and go to state 15

    $default  reduce using rule 44 (chunks)

    program   go to state 16
    exp       go to state 17
    lvalue    go to state 18
    chunks    go to state 19
    funchunk  go to state 20
    fundec    go to state 21
    varchunk  go to state 22
    vardec    go to state 23
    tychunk   go to state 24
    tydec     go to state 25


State 1

    4 exp: "string" •

    $default  reduce using rule 4 (exp)


State 2

    6 exp: "identifier" •  ["end of file", "&", ",", "/", "do", "else", "end", "=", "function", ">=", ">", "in", "<=", "<", "-", "<>", "|", "+", "}", "]", ")", ";", "then", "*", "to", "type", "var"]
    7    | "identifier" • "(" exps.0 ")"
   29    | "identifier" • "[" exp "]" "of" exp
   30    | "identifier" • "{" fieldinits "}"
   32 lvalue: "identifier" •  [":=", ".", "["]

    "{"  shift, and go to state 26
    "["  shift, and go to state 27
    "("  shift, and go to state 28

    ":="      reduce using rule 32 (lvalue)
    "."       reduce using rule 32 (lvalue)
    "["       [reduce using rule 32 (lvalue)]
    $default  reduce using rule 6 (exp)

    shift/reduce conflict on token "[":
       32 lvalue: "identifier" •
       29 exp: "identifier" • "[" exp "]" "of" exp
      First example: "identifier" • "[" exp "]" "of" exp "end of file"
      Shift derivation
        $accept
        ↳ 0: program                                        "end of file"
             ↳ 1: exp
                  ↳ 29: "identifier" • "[" exp "]" "of" exp
      Second example: "identifier" • "[" exp "]" ":=" exp "end of file"
      Reduce derivation
        $accept
        ↳ 0: program                                                   "end of file"
             ↳ 1: exp
                  ↳ 9: lvalue                                 ":=" exp
                       ↳ 33: lvalue               "[" exp "]"
                             ↳ 32: "identifier" •



State 3

    3 exp: "integer" •

    $default  reduce using rule 3 (exp)


State 4

   14 exp: "break" •

    $default  reduce using rule 14 (exp)


State 5

   13 exp: "for" • "identifier" ":=" exp "to" exp "do" exp

    "identifier"  shift, and go to state 29


State 6

   50 fundec: "function" • "identifier" "(" funargs ")" typeid.opt "=" exp

    "identifier"  shift, and go to state 30


State 7

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • "identifier"
    7    | • "identifier" "(" exps.0 ")"
    8    | • "(" exps.0 ")"
    9    | • lvalue ":=" exp
   10    | • "if" exp "then" exp
   10    | "if" • exp "then" exp
   11    | • "if" exp "then" exp "else" exp
   11    | "if" • exp "then" exp "else" exp
   12    | • "while" exp "do" exp
   13    | • "for" "identifier" ":=" exp "to" exp "do" exp
   14    | • "break"
   15    | • "let" chunks "in" exps.0 "end"
   16    | • exp "+" exp
   17    | • exp "-" exp
   18    | • exp "*" exp
   19    | • exp "/" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp "<" exp
   23    | • exp "<=" exp
   24    | • exp ">" exp
   25    | • exp ">=" exp
   26    | • "-" exp
   27    | • exp "&" exp
   28    | • exp "|" exp
   29    | • "identifier" "[" exp "]" "of" exp
   30    | • "identifier" "{" fieldinits "}"
   31    | • "_exp" "(" "integer" ")"
   32 lvalue: • "identifier"
   33       | • lvalue "[" exp "]"
   34       | • lvalue "." "identifier"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 5
    "if"          shift, and go to state 7
    "let"         shift, and go to state 8
    "("           shift, and go to state 9
    "-"           shift, and go to state 10
    "nil"         shift, and go to state 11
    "while"       shift, and go to state 14
    "_exp"        shift, and go to state 15

    exp     go to state 31
    lvalue  go to state 18


State 8

   15 exp: "let" • chunks "in" exps.0 "end"
   44 chunks: ε •  ["in"]
   45       | • tychunk chunks
   46       | • funchunk chunks
   47       | • varchunk chunks
   48 funchunk: • fundec
   49         | • fundec funchunk
   50 fundec: • "function" "identifier" "(" funargs ")" typeid.opt "=" exp
   57 varchunk: • vardec
   58 vardec: • "var" "identifier" ":=" exp
   59       | • "var" "identifier" ":" typeid ":=" exp
   60 tychunk: • tydec
   61        | • tydec tychunk
   62 tydec: • "type" "identifier" "=" ty

    "function"  shift, and go to state 6
    "type"      shift, and go to state 12
    "var"       shift, and go to state 13

    $default  reduce using rule 44 (chunks)

    chunks    go to state 32
    funchunk  go to state 20
    fundec    go to state 21
    varchunk  go to state 22
    vardec    go to state 23
    tychunk   go to state 24
    tydec     go to state 25


State 9

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • "identifier"
    7    | • "identifier" "(" exps.0 ")"
    8    | • "(" exps.0 ")"
    8    | "(" • exps.0 ")"
    9    | • lvalue ":=" exp
   10    | • "if" exp "then" exp
   11    | • "if" exp "then" exp "else" exp
   12    | • "while" exp "do" exp
   13    | • "for" "identifier" ":=" exp "to" exp "do" exp
   14    | • "break"
   15    | • "let" chunks "in" exps.0 "end"
   16    | • exp "+" exp
   17    | • exp "-" exp
   18    | • exp "*" exp
   19    | • exp "/" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp "<" exp
   23    | • exp "<=" exp
   24    | • exp ">" exp
   25    | • exp ">=" exp
   26    | • "-" exp
   27    | • exp "&" exp
   28    | • exp "|" exp
   29    | • "identifier" "[" exp "]" "of" exp
   30    | • "identifier" "{" fieldinits "}"
   31    | • "_exp" "(" "integer" ")"
   32 lvalue: • "identifier"
   33       | • lvalue "[" exp "]"
   34       | • lvalue "." "identifier"
   35 exps.0: ε •  [")"]
   36       | • exps
   37 exps: • exp
   38     | • exps ";" exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 5
    "if"          shift, and go to state 7
    "let"         shift, and go to state 8
    "("           shift, and go to state 9
    "-"           shift, and go to state 10
    "nil"         shift, and go to state 11
    "while"       shift, and go to state 14
    "_exp"        shift, and go to state 15

    $default  reduce using rule 35 (exps.0)

    exp     go to state 33
    lvalue  go to state 18
    exps.0  go to state 34
    exps    go to state 35


State 10

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • "identifier"
    7    | • "identifier" "(" exps.0 ")"
    8    | • "(" exps.0 ")"
    9    | • lvalue ":=" exp
   10    | • "if" exp "then" exp
   11    | • "if" exp "then" exp "else" exp
   12    | • "while" exp "do" exp
   13    | • "for" "identifier" ":=" exp "to" exp "do" exp
   14    | • "break"
   15    | • "let" chunks "in" exps.0 "end"
   16    | • exp "+" exp
   17    | • exp "-" exp
   18    | • exp "*" exp
   19    | • exp "/" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp "<" exp
   23    | • exp "<=" exp
   24    | • exp ">" exp
   25    | • exp ">=" exp
   26    | • "-" exp
   26    | "-" • exp
   27    | • exp "&" exp
   28    | • exp "|" exp
   29    | • "identifier" "[" exp "]" "of" exp
   30    | • "identifier" "{" fieldinits "}"
   31    | • "_exp" "(" "integer" ")"
   32 lvalue: • "identifier"
   33       | • lvalue "[" exp "]"
   34       | • lvalue "." "identifier"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 5
    "if"          shift, and go to state 7
    "let"         shift, and go to state 8
    "("           shift, and go to state 9
    "-"           shift, and go to state 10
    "nil"         shift, and go to state 11
    "while"       shift, and go to state 14
    "_exp"        shift, and go to state 15

    exp     go to state 36
    lvalue  go to state 18


State 11

    5 exp: "nil" •

    $default  reduce using rule 5 (exp)


State 12

   62 tydec: "type" • "identifier" "=" ty

    "identifier"  shift, and go to state 37


State 13

   58 vardec: "var" • "identifier" ":=" exp
   59       | "var" • "identifier" ":" typeid ":=" exp

    "identifier"  shift, and go to state 38


State 14

    3 exp: • "integer"
    4    | • "string"
    5    | • "nil"
    6    | • "identifier"
    7    | • "identifier" "(" exps.0 ")"
    8    | • "(" exps.0 ")"
    9    | • lvalue ":=" exp
   10    | • "if" exp "then" exp
   11    | • "if" exp "then" exp "else" exp
   12    | • "while" exp "do" exp
   12    | "while" • exp "do" exp
   13    | • "for" "identifier" ":=" exp "to" exp "do" exp
   14    | • "break"
   15    | • "let" chunks "in" exps.0 "end"
   16    | • exp "+" exp
   17    | • exp "-" exp
   18    | • exp "*" exp
   19    | • exp "/" exp
   20    | • exp "=" exp
   21    | • exp "<>" exp
   22    | • exp "<" exp
   23    | • exp "<=" exp
   24    | • exp ">" exp
   25    | • exp ">=" exp
   26    | • "-" exp
   27    | • exp "&" exp
   28    | • exp "|" exp
   29    | • "identifier" "[" exp "]" "of" exp
   30    | • "identifier" "{" fieldinits "}"
   31    | • "_exp" "(" "integer" ")"
   32 lvalue: • "identifier"
   33       | • lvalue "[" exp "]"
   34       | • lvalue "." "identifier"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 5
    "if"          shift, and go to state 7
    "let"         shift, and go to state 8
    "("           shift, and go to state 9
    "-"           shift, and go to state 10
    "nil"         shift, and go to state 11
    "while"       shift, and go to state 14
    "_exp"        shift, and go to state 15

    exp     go to state 39
    lvalue  go to state 18


State 15

   31 exp: "_exp" • "(" "integer" ")"

    "("  shift, and go to state 40


State 16

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 41


State 17

    1 program: exp •  ["end of file"]
   16 exp: exp • "+" exp
   17    | exp • "-" exp
   18    | exp • "*" exp
   19    | exp • "/" exp
   20    | exp • "=" exp
   21    | exp • "<>" exp
   22    | exp • "<" exp
   23    | exp • "<=" exp
   24    | exp • ">" exp
   25    | exp • ">=" exp
   27    | exp • "&" exp
   28    | exp • "|" exp

    "&"   shift, and go to state 42
    "/"   shift, and go to state 43
    "="   shift, and go to state 44
    ">="  shift, and go to state 45
    ">"   shift, and go to state 46
    "<="  shift, and go to state 47
    "<"   shift, and go to state 48
    "-"   shift, and go to state 49
    "<>"  shift, and go to state 50
    "|"   shift, and go to state 51
    "+"   shift, and go to state 52
    "*"   shift, and go to state 53

    $default  reduce using rule 1 (program)


State 18

    9 exp: lvalue • ":=" exp
   33 lvalue: lvalue • "[" exp "]"
   34       | lvalue • "." "identifier"

    ":="  shift, and go to state 54
    "."   shift, and go to state 55
    "["   shift, and go to state 56


State 19

    2 program: chunks •

    $default  reduce using rule 2 (program)


State 20
